src/database_sg.tf
resource "aws_security_group" "databasesg" {
  vpc_id = aws_vpc.mmyvpc.id


  ingress {
    description     = "TLS from VPC"
    from_port       = 3306
    to_port         = 3306
    protocol        = "tcp"
    security_groups = [aws_security_group.websg.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "databse_sg"
  }
}
